--- a/pgups/templates/pgups/start_result.html
+++ b/pgups/templates/pgups/start_result.html
@@ -8,7 +8,7 @@
 
 		<!-- Heading -->
 		<div class="heading">
-			<a class="decorated-link" href="../../starts/{{competition_id}}/#start{{start_num}}">
+			<a class="decorated-link" href="{% url 'competition_starts' competition_id=competition_id %}#start{{start_num}}">
 				<h1><b>Список стартов</b></h1>
 			</a>
 		</div> <!-- End of Heading -->
