judequinn.angularjs font

--- a/pgups/templates/pgups/final_print.html
+++ b/pgups/templates/pgups/final_print.html
@@ -25,7 +25,7 @@
 				<col class="col2">
 				<col class="col3">
 
-				<tr><th colspan="4">{{tuple.0.style|capfirst}}, {{tuple.0.distance|capfirst}}, {{tuple.0.gender|capfirst}}, {{tuple.0.age|capfirst}} </th></tr>
+				<tr><th colspan="4" class="cdsg_name">{{tuple.0.style|capfirst}}, {{tuple.0.distance|capfirst}}, {{tuple.0.gender|capfirst}}, {{tuple.0.age|capfirst}} </th></tr>
 					{% for competitor in tuple.1 %}
 				<tr>
                     <td class="position">{{ forloop.counter }}</td>
