--- a/pgups/templates/pgups/start_result_view.html
+++ b/pgups/templates/pgups/start_result_view.html
@@ -15,8 +15,8 @@
 
 		<!-- Heading -->
 		<div class="heading">
-			<a class="decorated-link" href="../../starts/{{competition_id}}/">
-				<h1><b>Все старты</b></h1>
+			<a class="decorated-link" href="{% url 'competition_starts' competition_id=competition_id %}#start{{start_num}}">
+				<h1><b>Список стартов</b></h1>
 			</a>
 		</div> <!-- End of Heading -->
 
