--- a/pgups/templates/pgups/starts_print.html
+++ b/pgups/templates/pgups/starts_print.html
@@ -15,7 +15,7 @@
 <h2>Лично-командное первенство по плаванию посвящённое 30-летию Дома Физической Культуры ФГБОУ ВО ПГУПС Императора Александра I, среди детей 6-17 лет (бассейн 25 метров)</h2>
 
 Утверждаю<br>
-Директор Дома физ культуры Н.С. Рогалев<br>
+Директор Дома физической культуры Н.С. Рогалев<br>
 24 апреля 2016
 <br>
 <hr>
@@ -30,7 +30,7 @@
 				<col class="col2">
 				<col class="col3">
 
-				<tr><th colspan="4">{{cdsg.name|capfirst}} </th></tr>
+				<tr><th colspan="4" class="cdsg_name">{{cdsg.name|capfirst}} </th></tr>
 					{% for start in cdsg.start_set.all %}
                 <tr><th colspan="4">Заплыв {{start.num}}</th></tr>
 
