--- a/pgups/templates/pgups/competition_team.html
+++ b/pgups/templates/pgups/competition_team.html
@@ -2,27 +2,50 @@
 {% load staticfiles %}
 {% block content %}
 
+<!-- Notie messages -->
+{% for message in messages %}
+	<script src="{% static 'js/notie.js' %}"></script>
+	<script> notie.alert(1, 'Изменения сохранены', 0.5); </script>
+{% endfor %}
+
 <div class="container">
 
 	<!-- Heading -->
 	<div class="heading">
+        <a class="decorated-link" href="/competition/{{ competition.id }}/">
+			<h1><b>{{ competition.name }}</b></h1>
+		</a>
+
 		<h2><b>Команда {{team.name}}</b></h2>
 	</div> <!-- End of Heading -->
 
+		{% if user.is_authenticated %}<form role="form" method="POST">{% csrf_token %}{% endif %}
+
+		{{ competitor_formset.management_form }}
+
 	<table class="table table-striped table-hover table-bordered">
 		<tbody>
-				{% for item in result  %}
+
+						{% for competitor_form in competitor_formset %}
+					{{competitor_form.id}}
+
 					<tr>
-						<td class="column-name-wide">{{item.0.last_name|title}} {{item.0.first_name|title}}</td>
-						<td class="column-result-wide">
-							{% for competitor in item.1  %} 
-								{{competitor.tour}} <br> 
-							{% endfor %}
-						</td>
+						<td class="column-name">{{competitor_form.instance.person.last_name|title}} {{competitor_form.instance.person.first_name|title}}</td>
+						<td class="column-tour padding-15">{{competitor_form.instance.tour.style.name}} {{competitor_form.instance.tour.distance.name}}</td>
+
+						{% if user.is_authenticated %}
+						<td class="column-approved padding-15 text-center">{{competitor_form.approved}}</td>
+						{% endif %}
 					</tr>
 				{% endfor %}
 		</tbody>
 	</table>
+
+				{% if user.is_authenticated %}
+				<button class="btn btn-lg btn-success pull-right" type="submit">Сохранить изменения</button>
+
+		</form>
+			{% endif %}
 
 </div>
 
