--- a/pgups/templates/pgups/tour.html
+++ b/pgups/templates/pgups/tour.html
@@ -5,6 +5,10 @@
 <div class="container">
 
 	<div class="heading">
+		<a class="decorated-link" href="/competition/{{ competition_id }}/">
+			<h1><b>{{ competition_name }}</b></h1>
+		</a>
+
 		<h2><b>{{tour_name}}</b></h2>
 	</div>
 
