--- a/pgups/templates/pgups/competition_starts_sort.html
+++ b/pgups/templates/pgups/competition_starts_sort.html
@@ -6,7 +6,7 @@
 
 	<div ng-app="sortableStartsApp" ng-controller="SortController as sortCtrl">
 
-		<!-- {$ sortCtrl.data.starts_list $} -->
+		<!--{$ sortCtrl.data.starts_list $}-->
 
 		<input type="hidden" name="csrf_token" ng-init="csrf_token='{{csrf_token}}'" ng-model="csrf_token">
 
@@ -31,11 +31,12 @@
 
 				</div>
 
-				<div class="single-start-sort sortable-start-list col-lg-offset-6 col-md-offset-6" ng-repeat-end ng-if="!$first">
+				<div id="start-$index" class="single-start-sort sortable-start-list col-lg-offset-6 col-md-offset-6" ng-repeat-end ng-if="!$first">
 
 					<!-- Start number -->
 					<div class="start-number">
 						<h3 class="pull-left">Заплыв {$ $index $}</h3>
+						<button id="remove-start-button-$index" class="btn btn-sm btn-danger pull-right" ng-click="sortCtrl.removeStart($index)"><span class="glyphicon glyphicon-remove"></span></button>
 					</div> <!-- End of Start number -->
 
 					<div class="competitor-list-sort" ui-sortable="sortCtrl.sortableStartOptions" ng-model="start.competitors">
@@ -50,7 +51,7 @@
 
 			<div class="row">
 				<div class="col-lg-3">
-					<button class="btn btn-lg btn-success" ng-click="sortCtrl.addStart()">Добавить заплыв</button>
+					<button id="add-start-button" class="btn btn-lg btn-success" ng-click="sortCtrl.addStart()">Добавить заплыв</button>
 				</div>
 			</div>
 
