judequinn.angularjs sortable starts select label

--- a/pgups/templates/pgups/competition_starts_sort.html
+++ b/pgups/templates/pgups/competition_starts_sort.html
@@ -31,7 +31,7 @@
 
 			<br>
 
-			<span>Выберите максимальное количество участников в заплыве: </span>
+			<span>Количество дорожек: &nbsp</span>
 			<select class="selectpicker" ng-model="sortCtrl.maxLength" title="" data-style="btn-info">
 				<option value="" selected disabled></option>
 				<option value="5">5</option>
