--- a/pgups/templates/pgups/competition_starts_sort.html
+++ b/pgups/templates/pgups/competition_starts_sort.html
@@ -26,7 +26,7 @@
 
 			<!-- DEBUG -->
 			<input type="checkbox" ng-model="showDebugData"><span> DEBUG: показать данные</span>
-			<p ng-show="showDebugData">{$ sortCtrl.data.starts_list $}</p>
+			<p ng-show="showDebugData">{$ sortCtrl.data $}</p>
 			<!-- DEBUG -->
 
 			<br>
