judequinn.angularjs added manually sorted starts saving controller 2

--- a/pgups/templates/pgups/results_starts.html
+++ b/pgups/templates/pgups/results_starts.html
@@ -20,7 +20,7 @@
 
 			<!-- Start number -->
 			<div class="start-number">
-				<h3>Заплыв {{start.num}}</h3>
+				<h3>Заплыв {{start.num}} ({{start.name}})</h3>
 			</div> <!-- End of Start number -->
 
 			<table class="table table-striped table-hover table-bordered">
