--- a/pgups/static/css/main.css
+++ b/pgups/static/css/main.css
@@ -67,19 +67,29 @@ body {
 .decorated-link {
   text-decoration: underline;
 }
+.bold {
+  font-weight: bold;
+}
 /* Competition page */
 /*==================*/
 .competition-menu {
   margin-bottom: 20px;
 }
 .generate-starts {
-  margin-bottom: 40px;
+  margin-bottom: 10px;
   float: left;
   clear: both;
 }
-.starts {
-  margin-bottom: 20px;
+.starts-btn {
+  margin-bottom: 10px;
   float: left;
+}
+.lanes-select {
+  margin-bottom: 40px;
+  clear: both;
+}
+.ages-select {
+  margin-left: 10px;
 }
 /* Forms       */
 /*=============*/
