--- a/pgups/templates/pgups/competition.html
+++ b/pgups/templates/pgups/competition.html
@@ -52,38 +52,60 @@
 
 		<div class="row">
 
-			<div class="col-lg-3">
-				<a class="btn btn-lg btn-success starts" href="../../competition/starts/{{competition.id}}/">
-					<span>Текущая сетка стартов</span>
+			<div class="col-lg-12">
+				<a class="btn btn-lg btn-success starts-btn" href="../../competition/starts/{{competition.id}}/">
+					<span class="glyphicon glyphicon-list-alt"></span> <span>Текущая сетка стартов</span>
 				</a>
+
+				{% if user.is_authenticated %}
+				<a class="pull-right btn btn-lg btn-default" href="{% url 'starts_print' competition_id=competition.id %}" target="_blank">
+					<span class="glyphicon glyphicon-print"></span> <span>Стартовые протоколы</span>
+				</a>
+				{% endif %}
+
 			</div>
 
 			{% if user.is_authenticated %}
 
-				<div class="col-lg-3 col-lg-offset-6">
-					<form action="." method="POST" >{% csrf_token %}
-						<input type="hidden" name="competition_id" value="{{competition.id}}">
-						<input type="hidden" name="close" value="1">
-						<input type="submit" class="close-competition btn btn-lg btn-danger pull-right" value="Закрыть соревнования">
-					</form>
+				<div class="col-lg-12">
+					<a class="pull-left btn btn-lg btn-default" href="../../competition_starts_sort/{{competition.id}}/">
+						<span class="glyphicon glyphicon-wrench"></span> <span>Ручная настройка стартов</span>
+					</a>
 				</div>
 
-				<div class="col-lg-12">
+				<div class="col-lg-12"><hr></div>
+
+				<div class="col-lg-6">
+
 					<form action="../../generate_starts/" method="POST" >{% csrf_token %}
+
 						<input type="hidden" name="competition_id" value="{{competition.id}}">
-						<select name="lanes">
+
+						<button type="submit" onclick="return confirm('Результаты будут удалены. Продолжить?')" class="generate-starts btn btn-lg btn-warning"> <span class="glyphicon glyphicon-refresh"></span> Перегенерировать старты</button>
+
+						<select class="pull-left lanes-select" name="lanes">
 							<option value="5">5 дорожек</option>
 							<option value="6">6 дорожек</option>
 						</select>
-						<input type="checkbox" name="ages"> С разбивкой по возрастам
-						<input type="submit" onclick="return confirm('Результаты будут удалены. Продолжить?')" class="generate-starts btn btn-lg btn-default" value="Перегенерировать старты">
+
+						<div class="pull-left ages-select">
+							<input type="checkbox" name="ages">
+							<span>С разбивкой по возрастам</span>
+						</div>
+
 					</form>
+
 				</div>
 
-
-				<a class="pull-right btn btn-md btn-default" href="{% url 'starts_print' competition_id=competition.id %}" target="_blank">Стартовые протоколы (печать)</a>
-
-				<a class="pull-right btn btn-md btn-default" href="../../competition_starts_sort/{{competition.id}}/">Ручная настройка стартов</a>
+				<div class="col-lg-6">
+						<form action="." method="POST" >{% csrf_token %}
+							<input type="hidden" name="competition_id" value="{{competition.id}}">
+							<input type="hidden" name="close" value="1">
+							<button type="submit" class="close-competition btn btn-lg btn-danger pull-right">
+								<span class="glyphicon glyphicon-off"></span> Закрыть соревнования
+							</button>
+						</form>
+				</div>
 
 			{% endif %}
 
