--- a/pgups/templates/pgups/competition_starts_sort.html
+++ b/pgups/templates/pgups/competition_starts_sort.html
@@ -16,7 +16,7 @@
 						<a class="decorated-link" href="{% url 'competition' competition_id=competition_id %}">
 							<h1><b>{$ sortCtrl.data.competition_name $}</b></h1>
 						</a>
-						<p class="lead">Форма создания заплывов</p>
+						<p class="lead">Ручное создание и сортировка заплывов</p>
 					</div>
 				</div>
 			</div>
@@ -48,7 +48,16 @@
 						<div class="connected-competitors sort-buffer" ui-sortable="sortCtrl.sortableStartOptions" ng-model="start.competitors">
 
 							<div class="single-competitor-sort" ng-repeat="competitor in start.competitors">
-								{$ competitor.last_name | cap $} {$ competitor.first_name | cap $} {$ competitor.age $} {$ competitor.team $} {$ competitor.prior_time $}
+
+								<div ng-class="{bold: competitor.main_distance}">
+									{$ competitor.last_name | cap $} {$ competitor.first_name | cap $} ({$ competitor.team $})
+								</div>
+
+								<div>
+									{$ competitor.distance $} {$ competitor.style $} {$ competitor.age $} {$ competitor.gender $}
+									<div class="pull-right">{$ competitor.prior_time $}</div>
+								</div>
+
 							</div>
 						</div>
 
@@ -64,7 +73,16 @@
 
 						<div class="connected-competitors competitor-list-sort" ui-sortable="sortCtrl.sortableStartOptions" ng-model="start.competitors">
 							<div class="single-competitor-sort" ng-repeat="competitor in start.competitors">
-								{$ competitor.last_name | cap $} {$ competitor.first_name | cap $} {$ competitor.age $} {$ competitor.team $} {$ competitor.prior_time $}
+
+								<div ng-class="{bold: competitor.main_distance}">
+									{$ competitor.last_name | cap $} {$ competitor.first_name | cap $} ({$ competitor.team $})
+								</div>
+
+								<div>
+									{$ competitor.distance $} {$ competitor.style $} {$ competitor.age $} {$ competitor.gender $}
+									<div class="pull-right">{$ competitor.prior_time $}</div>
+								</div>
+
 							</div>
 						</div>
 
@@ -99,7 +117,14 @@
 
 							<div ng-model="start.competitors">
 								<div class="single-competitor-sort" ng-repeat="competitor in start.competitors">
-									{$ competitor.last_name | cap $} {$ competitor.first_name | cap $} {$ competitor.age $} {$ competitor.team $} {$ competitor.prior_time $}
+									<div ng-class="{bold: competitor.main_distance}">
+										{$ competitor.last_name | cap $} {$ competitor.first_name | cap $} ({$ competitor.team $})
+									</div>
+
+									<div>
+										{$ competitor.distance $} {$ competitor.style $} {$ competitor.age $} {$ competitor.gender $}
+										<div class="pull-right">{$ competitor.prior_time $}</div>
+									</div>
 								</div>
 							</div>
 
@@ -111,7 +136,7 @@
 
 				<div class="row">
 					<div class="col-lg-3">
-						<button class="btn btn-lg btn-default button-margin" ng-click="sortCtrl.stepCounter.prev();">Вернуться к настройке заплывов</button>
+						<button class="btn btn-lg btn-default button-margin" ng-click="sortCtrl.stepCounter.prev();">Вернуться к распределению участников</button>
 					</div>
 					<div class="col-lg-3 col-lg-offset-6">
 						<button id="submit-request-button" class="btn btn-lg btn-success button-margin" ng-click="sortCtrl.validateStarts();">Сохранить заплывы</button>
