--- a/pgups/static/css/main.css
+++ b/pgups/static/css/main.css
@@ -167,10 +167,11 @@ select.ng-invalid.ng-dirty {
 }
 .single-start-container {
   padding: 15px 0 15px;
+  overflow: hidden;
   border-bottom: 1px solid #979a9d;
 }
 .start-number {
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   overflow: hidden;
 }
 .btn-results {
