judequinn.angularjs icons everywhere!

--- a/pgups/templates/pgups/competition_starts_sort.html
+++ b/pgups/templates/pgups/competition_starts_sort.html
@@ -32,7 +32,7 @@
 			<br>
 
 			<span>Количество дорожек: &nbsp</span>
-			<select class="selectpicker" ng-model="sortCtrl.maxLength" title="" data-style="btn-info">
+			<select class="selectpicker" ng-model="sortCtrl.maxLength" title="">
 				<option value="" selected disabled></option>
 				<option value="5">5</option>
 				<option value="6">6</option>
