--- a/pgups/templates/pgups/start_result.html
+++ b/pgups/templates/pgups/start_result.html
@@ -52,7 +52,7 @@
 				</tbody>
 			</table>
 
-			<button class="btn btn-success btn-lg pull-right" type="submit">Сохранить результат</button>
+			<button class="btn btn-success btn-lg pull-right" type="submit"><span class="glyphicon glyphicon-ok"></span> Сохранить результат</button>
 
 		</form>
 
