judequinn.angularjs renamed tours and starts + minor

--- a/pgups/templates/pgups/competition_create.html
+++ b/pgups/templates/pgups/competition_create.html
@@ -163,7 +163,7 @@
 
 					<!-- Heading -->
 					<div class="heading">
-						<h2>Выберите туры</h2>
+						<h2>Выберите дисциплины</h2>
 					</div> <!-- End of Heading -->
 
 					<div class="checkbox">
@@ -212,7 +212,7 @@
 
 					</div> <!-- End of Heading -->
 
-					<h3 class="small-heading">Список туров:</h3>
+					<h3 class="small-heading">Список дисциплин:</h3>
 
 					<div>
 						<ul class="basic-list">
