--- a/pgups/templates/pgups/competition_starts_sort.html
+++ b/pgups/templates/pgups/competition_starts_sort.html
@@ -24,10 +24,10 @@
 
 		<div class="container">
 
-			<!-- DEBUG -->
+			<!-- DEBUG
 			<input type="checkbox" ng-model="showDebugData"><span> DEBUG: показать данные</span>
 			<p ng-show="showDebugData">{$ sortCtrl.data $}</p>
-			<!-- DEBUG -->
+			DEBUG -->
 
 			<br>
 
