--- a/pgups/templates/pgups/results_tours.html
+++ b/pgups/templates/pgups/results_tours.html
@@ -9,7 +9,7 @@
 		<a class="decorated-link" href="{% url 'competition' competition_id=competition.id %}">
 			<h1><b>{{competition.name}}</b></h1>
 		</a>
-		<h2>Результаты по турам</h2>
+		<h2>Результаты по дисциплинам</h2>
 	</div> <!-- End of Heading -->
 
 	<!--<p class="note bold">* основная дистанция</p>-->
