--- a/pgups/templates/pgups/userrequest.html
+++ b/pgups/templates/pgups/userrequest.html
@@ -19,7 +19,7 @@
 
 		<h2><b>
 			{% if userrequest.team %}
-			Заявка команды "{{userrequest.team}}"
+			Заявка команды "{{userrequest.team}}", {{userrequest.representative}} 
 			{% else %}
 			Индивидуальная заявка
 			{% endif %}
@@ -48,8 +48,16 @@
 					{{competitor_form.id}}
 
 					<tr>
-						<td class="column-name">{{competitor_form.instance.person.last_name|title}} {{competitor_form.instance.person.first_name|title}}</td>
-						<td class="column-tour padding-15">{{competitor_form.instance.tour.style.name}} {{competitor_form.instance.tour.distance.name}}</td>
+						<td class="column-name">
+							{% if competitor_form.instance.main_distance%}<span><b>{% endif %}
+							{{competitor_form.instance.person.last_name|title}} {{competitor_form.instance.person.first_name|title}}
+							{% if competitor_form.instance.main_distance%}</b></span>{% endif %}
+						</td>
+						<td class="column-tour padding-15">
+							{% if competitor_form.instance.main_distance%}<span><b>{% endif %}
+							{{competitor_form.instance.tour.style.name}} {{competitor_form.instance.tour.distance.name}}
+							{% if competitor_form.instance.main_distance%}</b></span>{% endif %}
+						</td>
 						{% if user.is_authenticated %}
 						<td class="column-approved padding-15 text-center">{{competitor_form.approved}}</td>
 						{% endif %}
