--- a/pgups/templates/pgups/competition.html
+++ b/pgups/templates/pgups/competition.html
@@ -16,7 +16,7 @@
 				<li>
 					<a href="../../userrequest/{{userrequest.id}}/">{{userrequest.date|date:"d.m.Y"}}: 
 					{% if userrequest.team %}
-						{{userrequest.team}}
+						{{userrequest.team}} ({{userrequest.representative}})
 					{% else %}
 						индивидуальная заявка
 					{% endif %}
@@ -38,7 +38,7 @@
 		<hr> <!-- End of Teams -->
 
 		<!-- Tours -->
-		<h2>Туры</h2>
+		<h2>Дисциплины</h2>
 		<ul class="basic-list">
 			{% for tour in competition.tour_set.all %}
 			{% if tour.competitor_set.all|length > 0 %}
@@ -54,7 +54,7 @@
 
 			<div class="col-lg-12">
 				<a class="btn btn-lg btn-success starts-btn" href="../../competition/starts/{{competition.id}}/">
-					<span class="glyphicon glyphicon-list-alt"></span> <span>Текущая сетка стартов</span>
+					<span class="glyphicon glyphicon-list-alt"></span> <span>Текущая сетка заплывов</span>
 				</a>
 
 				{% if user.is_authenticated %}
@@ -69,7 +69,7 @@
 
 				<div class="col-lg-12">
 					<a class="pull-left btn btn-lg btn-default" href="../../competition_starts_sort/{{competition.id}}/">
-						<span class="glyphicon glyphicon-wrench"></span> <span>Ручная настройка стартов</span>
+						<span class="glyphicon glyphicon-wrench"></span> <span>Ручная настройка заплывов</span>
 					</a>
 				</div>
 
@@ -81,7 +81,7 @@
 
 						<input type="hidden" name="competition_id" value="{{competition.id}}">
 
-						<button type="submit" onclick="return confirm('Результаты будут удалены. Продолжить?')" class="generate-starts btn btn-lg btn-warning"> <span class="glyphicon glyphicon-refresh"></span> Перегенерировать старты</button>
+						<button type="submit" onclick="return confirm('Текущие результаты заплывов будут удалены и сетка будет сгенерирована заново. Продолжить?')" class="generate-starts btn btn-lg btn-warning"> <span class="glyphicon glyphicon-refresh"></span> Перегенерировать заплывы</button>
 
 						<select class="selectpicker pull-left lanes-select" name="lanes">
 							<option value="5">5 дорожек</option>
@@ -120,7 +120,7 @@
 		</p>
 
 		<p>
-			<a class="btn btn-lg btn-primary" href="../../results/tours/{{competition.id}}/"><span class="glyphicon glyphicon-list-alt"></span> Результаты по турам</a>
+			<a class="btn btn-lg btn-primary" href="../../results/tours/{{competition.id}}/"><span class="glyphicon glyphicon-list-alt"></span> Результаты по дисциплинам</a>
 		</p>
 
 		<p>
