--- a/pgups/templates/pgups/start_result_view.html
+++ b/pgups/templates/pgups/start_result_view.html
@@ -16,7 +16,7 @@
 		<!-- Heading -->
 		<div class="heading">
 			<a class="decorated-link" href="{% url 'competition_starts' competition_id=competition_id %}#start{{start_num}}">
-				<h1><b>Список стартов</b></h1>
+				<h1><b>Список заплывов</b></h1>
 			</a>
 		</div> <!-- End of Heading -->
 
